added MinorPlanet.cpp and Comet.cpp to translations

--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -7,6 +7,8 @@ src/core/modules/LandscapeMgr.cpp
 src/core/modules/Nebula.cpp
 src/core/modules/NebulaMgr.cpp
 src/core/modules/Planet.cpp
+src/core/modules/MinorPlanet.cpp
+src/core/modules/Comet.cpp
 src/core/modules/SolarSystem.cpp
 src/core/modules/StarWrapper.cpp
 src/core/StelObserver.cpp
