added small improvements to Observability analysis plugin

--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -93,3 +93,6 @@ plugins/Exoplanets/src/Exoplanets.cpp
 plugins/Exoplanets/src/Exoplanet.cpp
 plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp
 plugins/Exoplanets/src/ui_exoplanetsDialog.h
+plugins/Observability/src/Observability.cpp
+plugins/Observability/src/gui/ObservabilityDialog.cpp
+plugins/Observability/src/ui_ObservabilityDialog.h
