added zero landscape and Sterngarten models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -372,4 +372,6 @@ IF(ENABLE_SCRIPTING)
 ENDIF()
 ADD_SUBDIRECTORY( stars )
 ADD_SUBDIRECTORY( plugins )
-
+IF (USE_PLUGIN_SCENERY3D)
+  ADD_SUBDIRECTORY ( scenery3d )
+ENDIF()
