--- a/landscapes/CMakeLists.txt
+++ b/landscapes/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_SUBDIRECTORY( ocean )
 ADD_SUBDIRECTORY( garching ) 
 ADD_SUBDIRECTORY( mars ) 
 ADD_SUBDIRECTORY( saturn ) 
+ADD_SUBDIRECTORY( zero ) 
