Testing ignore file...

--- a/.bzrignore
+++ b/.bzrignore
@@ -1,4 +1,5 @@
 .bzrignore
+scenery3d
 builds
 installers
 .DS_Store
@@ -10,4 +11,4 @@ stellarium.iss
 *.log
 *.out
 *.dll
-scenery3d/scenery3d
+scenery3d
