--- a/data/Info.plist
+++ b/data/Info.plist
@@ -19,6 +19,8 @@
 	<key>CFBundleVersion</key>
 	<string>0.11.4</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.6.0</string>
+	<string>10.5.8</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
