update Info.plist for Retina displays

--- a/data/Info.plist
+++ b/data/Info.plist
@@ -22,5 +22,7 @@
 	<string>10.6.0</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSHighResolutionCapable</key>
+	<string>YES</string>
 </dict>
 </plist>
