Added a plugin for rendering statistics display.
Suspending profiling/optimizing work until new bugs are fixed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -641,6 +641,11 @@ ENDIF()
 	SET(STELLARIUM_STATIC_PLUGINS_LIBRARIES ${STELLARIUM_STATIC_PLUGINS_LIBRARIES} ${CMAKE_BINARY_DIR}/plugins/VirGO/src/${CMAKE_CFG_INTDIR}/libVirGO.a ${CFITSIO_LIBRARIES})
 	ADD_DEFINITIONS(-DUSE_STATIC_PLUGIN_VIRGO)
   ENDIF()
+
+  IF (USE_PLUGIN_RENDERERSTATISTICS)
+	  SET(STELLARIUM_STATIC_PLUGINS_LIBRARIES ${STELLARIUM_STATIC_PLUGINS_LIBRARIES} "${CMAKE_BINARY_DIR}/plugins/RendererStatistics/src/${CMAKE_CFG_INTDIR}/libRendererStatistics.a")
+	ADD_DEFINITIONS(-DUSE_STATIC_PLUGIN_RENDERERSTATISTICS)
+  ENDIF()
 ENDIF()
 
 
