--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,6 +141,10 @@ SET(stellarium_lib_SRCS
 	core/renderer/StelVertexBufferBackend.hpp
 	core/renderer/StelQGLArrayVertexBufferBackend.cpp
 	core/renderer/StelQGLArrayVertexBufferBackend.hpp
+	core/renderer/StelQGLInterleavedArrayVertexBufferBackend.cpp
+	core/renderer/StelQGLInterleavedArrayVertexBufferBackend.hpp
+	core/renderer/StelQGL2InterleavedArrayVertexBufferBackend.cpp
+	core/renderer/StelQGL2InterleavedArrayVertexBufferBackend.hpp
 	core/renderer/StelQGL1ArrayVertexBufferBackend.cpp
 	core/renderer/StelQGL1ArrayVertexBufferBackend.hpp
 	core/renderer/StelQGL2ArrayVertexBufferBackend.cpp
