Optimizes point source drawing (instead of  4verts/6indices/2tris we now have 3verts/0indices/1tri).
This only visibly affects FPS for heavy loads, when many stars are drawn at once.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,6 +365,14 @@ IF(WIN32)
   CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/stellarium.iss.cmake ${CMAKE_SOURCE_DIR}/stellarium.iss @ONLY)
 ENDIF(WIN32)
 
+########## Release build tweaks ###########
+
+# Nothing's here right now
+SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
+SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+SET(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
+
 IF(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
   ADD_DEFINITIONS(-DQT_NO_DEBUG)
   ADD_DEFINITIONS(-DNDEBUG)
