Statistics are now collected and provided through a custom class instead of a QMap.
This fixes a bug in statistics collection and also removes most of the statistics collection overhead.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,7 @@ SET(stellarium_lib_SRCS
 
 	core/Triplet.hpp
 
+	core/renderer/StelRendererStatistics.hpp
 	core/renderer/StelRenderer.cpp
 	core/renderer/StelRenderer.hpp
 	core/renderer/StelQGLViewport.cpp
