Location List Editor 0.1.0: read-only

--- a/.bzrignore
+++ b/.bzrignore
@@ -7,3 +7,6 @@ stellarium.iss
 *.kdev4
 ./doc/qt.tag
 ./locale
+./util/locations-editor/Makefile
+./util/locations-editor/locations-editor
+./util/locations-editor/locations-editor.pro.user
