--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1404,7 +1404,7 @@ orbit_MeanMotion = 7.8e-05
 orbit_MeanAnomaly = 358.1959
 minor_planet_number = 90377
 orbit_SemiMajorAxis = 542.4247
-albedo = 0.15
+albedo = 0.32
 radius = 1643
 type = asteroid
 
@@ -1426,7 +1426,7 @@ orbit_MeanMotion = 0.0034688
 orbit_MeanAnomaly = 276.4486
 minor_planet_number = 50000
 orbit_SemiMajorAxis = 43.2202
-albedo = 0.15
+albedo = 0.16
 radius = 1037
 type = asteroid
 
@@ -1448,7 +1448,7 @@ orbit_MeanMotion = 0.0040039
 orbit_MeanAnomaly = 168.1352
 minor_planet_number = 90482
 orbit_SemiMajorAxis = 39.27754
-albedo = 0.15
+albedo = 0.25
 radius = 1190
 type = asteroid
 
@@ -1470,6 +1470,72 @@ orbit_MeanMotion = 0.0034967
 orbit_MeanAnomaly = 205.216
 minor_planet_number = 136108
 orbit_SemiMajorAxis = 42.98956
-albedo = 0.15
+albedo = 0.73
 radius = 3130
+type = asteroid
+
+[136472makemake]
+name = Makemake
+parent = Sun
+orbit_Inclination = 28.99795761254687
+coord_func = comet_orbit
+orbit_Eccentricity = 0.1566358723166362
+orbit_ArgOfPericenter = 295.8208634497294
+orbit_Epoch =  2454135.5
+absolute_magnitude = -0.4
+slope_parameter = 0.15
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 79.59590003989989
+orbit_MeanMotion = 0.003198605
+orbit_MeanAnomaly = 148.7993929490911
+minor_planet_number = 136472
+orbit_SemiMajorAxis = 45.62073490995235
+albedo = 0.78
+radius = 1400
+type = asteroid
+
+[20000varuna]
+parent = Sun
+orbit_Inclination = 17.1431
+coord_func = comet_orbit
+orbit_Eccentricity = 0.054294
+orbit_ArgOfPericenter = 272.5375
+name = Varuna
+orbit_Epoch = 2456200.5
+absolute_magnitude = 3.6
+slope_parameter = 0.15
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 97.2614
+orbit_MeanMotion = 0.003477
+orbit_MeanAnomaly = 98.8487
+minor_planet_number = 20000
+orbit_SemiMajorAxis = 43.15171
+albedo = 0.15
+radius = 654
+type = asteroid
+
+[2250882007or10]
+parent = Sun
+orbit_Inclination = 30.8118
+coord_func = comet_orbit
+orbit_Eccentricity = 0.502036
+orbit_ArgOfPericenter = 206.7698
+name = 2007 OR10
+orbit_Epoch = 2456200.5
+absolute_magnitude = 2
+slope_parameter = 0.15
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 336.8394
+orbit_MeanMotion = 0.0017991
+orbit_MeanAnomaly = 102.6175
+minor_planet_number = 225088
+orbit_SemiMajorAxis = 66.95198
+albedo = 0.19
+radius = 1367
 type = asteroid
