update info for Jupiter and GRS

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -157,8 +157,8 @@ tex_halo = star16x16.png
 coord_func = jupiter_special
 lighting = true
 albedo = 0.51
-rot_periode = 9.927953
-rot_rotation_offset = 250 #just some value good for GRS #old:151
+rot_periode = 9.92491
+rot_rotation_offset = 306 #just some value good for GRS #old:250 #old:151
 #rot_obliquity = 2.222461
 #rot_equator_ascending_node = -22.203
 rot_pole_ra = 268.05
