Update textures for few planets: Venus, Mars, Pluto and Charon. Textures was take from http://maps.jpl.nasa.gov/

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1163,7 +1163,7 @@ parent = Pluto
 radius = 593.
 halo = true
 color = 1.,1.,1.
-tex_map = lune.png
+tex_map = charon.png
 tex_halo = star16x16.png
 lighting = true
 albedo = 0.35
