--- a/plugins/Exoplanets/src/CMakeLists.txt
+++ b/plugins/Exoplanets/src/CMakeLists.txt
@@ -24,18 +24,11 @@ QT4_WRAP_UI(ExoplanetsDialog_UIS_H ${ExoplanetsDialog_UIS})
 SET(Exoplanets_RES ../resources/Exoplanets.qrc)
 QT4_ADD_RESOURCES(Exoplanets_RES_CXX ${Exoplanets_RES})
 
-SET(Exoplanets_MOC_HDRS
- Exoplanets.hpp
- gui/ExoplanetsDialog.hpp
-)
-
-QT4_WRAP_CPP(Exoplanets_MOC_SRCS ${Exoplanets_MOC_HDRS})
-
 SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_LIBRARIES} ${ICONV_LIBRARIES} ${INTL_LIBRARIES})
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+	ADD_LIBRARY(Exoplanets MODULE ${Exoplanets_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -55,7 +48,7 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_MOC_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
+	ADD_LIBRARY(Exoplanets-static STATIC ${Exoplanets_SRCS} ${Exoplanets_RES_CXX} ${ExoplanetsDialog_UIS_H})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES OUTPUT_NAME "Exoplanets")
 	TARGET_LINK_LIBRARIES(Exoplanets-static ${extLinkerOption})
 	SET_TARGET_PROPERTIES(Exoplanets-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN")
