--- a/plugins/Quasars/src/CMakeLists.txt
+++ b/plugins/Quasars/src/CMakeLists.txt
@@ -25,18 +25,11 @@ QT4_WRAP_UI(QuasarsDialog_UIS_H ${QuasarsDialog_UIS})
 SET(Quasars_RES ../resources/Quasars.qrc)
 QT4_ADD_RESOURCES(Quasars_RES_CXX ${Quasars_RES})
 
-SET(Quasars_MOC_HDRS
-    Quasars.hpp
-    gui/QuasarsDialog.hpp
-)
-
-QT4_WRAP_CPP(Quasars_MOC_SRCS ${Quasars_MOC_HDRS})
-
 SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_LIBRARIES} ${ICONV_LIBRARIES} ${INTL_LIBRARIES})
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(Quasars MODULE ${Quasars_SRCS} ${Quasars_MOC_SRCS} ${Quasars_RES_CXX} ${QuasarsDialog_UIS_H})
+	ADD_LIBRARY(Quasars MODULE ${Quasars_SRCS} ${Quasars_RES_CXX} ${QuasarsDialog_UIS_H})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -56,7 +49,7 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(Quasars-static STATIC ${Quasars_SRCS} ${Quasars_MOC_SRCS} ${Quasars_RES_CXX} ${QuasarsDialog_UIS_H})
+	ADD_LIBRARY(Quasars-static STATIC ${Quasars_SRCS} ${Quasars_RES_CXX} ${QuasarsDialog_UIS_H})
 	SET_TARGET_PROPERTIES(Quasars-static PROPERTIES OUTPUT_NAME "Quasars")
 	TARGET_LINK_LIBRARIES(Quasars-static ${extLinkerOption})
 	SET_TARGET_PROPERTIES(Quasars-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN")
