--- a/plugins/SimpleDrawLine/src/CMakeLists.txt
+++ b/plugins/SimpleDrawLine/src/CMakeLists.txt
@@ -6,19 +6,11 @@ SET(SimpleDrawLine_SRCS
   SimpleDrawLine.hpp
   SimpleDrawLine.cpp)
 
-# Add here all the files which require moc compilation
-# that is, all the headers with SIGNAL/SLOTS/PLUGIN_INTERFACE etc..
-SET(SimpleDrawLine_MOC_HDRS
- SimpleDrawLine.hpp)
-
-# After this call, SimpleDrawLine_MOC_SRCS = moc_SimpleDrawLine.cxx
-QT4_WRAP_CPP(SimpleDrawLine_MOC_SRCS ${SimpleDrawLine_MOC_HDRS})
-
 SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_LIBRARIES} ${ICONV_LIBRARIES} ${INTL_LIBRARIES})
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(SimpleDrawLine MODULE ${SimpleDrawLine_SRCS} ${SimpleDrawLine_MOC_SRCS})
+	ADD_LIBRARY(SimpleDrawLine MODULE ${SimpleDrawLine_SRCS})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -38,7 +30,7 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(SimpleDrawLine-static STATIC ${SimpleDrawLine_SRCS} ${SimpleDrawLine_MOC_SRCS})
+	ADD_LIBRARY(SimpleDrawLine-static STATIC ${SimpleDrawLine_SRCS})
 	# The library target "SimpleDrawLine-static" has a default OUTPUT_NAME of "SimpleDrawLine-static", so change it.
 	SET_TARGET_PROPERTIES(SimpleDrawLine-static PROPERTIES OUTPUT_NAME "SimpleDrawLine")
 	TARGET_LINK_LIBRARIES(SimpleDrawLine-static ${extLinkerOption})
