--- a/plugins/Supernovae/src/CMakeLists.txt
+++ b/plugins/Supernovae/src/CMakeLists.txt
@@ -25,18 +25,11 @@ QT4_WRAP_UI(SupernovaeDialog_UIS_H ${SupernovaeDialog_UIS})
 SET(Supernovae_RES ../resources/Supernovae.qrc)
 QT4_ADD_RESOURCES(Supernovae_RES_CXX ${Supernovae_RES})
 
-SET(Supernovae_MOC_HDRS
-    Supernovae.hpp
-    gui/SupernovaeDialog.hpp
-)
-
-QT4_WRAP_CPP(Supernovae_MOC_SRCS ${Supernovae_MOC_HDRS})
-
 SET(extLinkerOption ${QT_LIBRARIES} ${JPEG_LIBRARIES} ${PNG_LIBRARIES} ${OPENGL_LIBRARIES} ${ICONV_LIBRARIES} ${INTL_LIBRARIES})
 
 ############### For building the dynamic library ######################
 IF(BUILD_DYNAMIC_PLUGINS)
-	ADD_LIBRARY(Supernovae MODULE ${Supernovae_SRCS} ${Supernovae_MOC_SRCS} ${Supernovae_RES_CXX} ${SupernovaeDialog_UIS_H})
+	ADD_LIBRARY(Supernovae MODULE ${Supernovae_SRCS} ${Supernovae_RES_CXX} ${SupernovaeDialog_UIS_H})
 	IF(APPLE)
 		FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
 		MARK_AS_ADVANCED(OPENGL_LIBRARY)
@@ -56,7 +49,7 @@ ENDIF()
 
 ############### For building the static library ######################
 IF(BUILD_STATIC_PLUGINS)
-	ADD_LIBRARY(Supernovae-static STATIC ${Supernovae_SRCS} ${Supernovae_MOC_SRCS} ${Supernovae_RES_CXX} ${SupernovaeDialog_UIS_H})
+	ADD_LIBRARY(Supernovae-static STATIC ${Supernovae_SRCS} ${Supernovae_RES_CXX} ${SupernovaeDialog_UIS_H})
 	SET_TARGET_PROPERTIES(Supernovae-static PROPERTIES OUTPUT_NAME "Supernovae")
 	TARGET_LINK_LIBRARIES(Supernovae-static ${extLinkerOption})
 	SET_TARGET_PROPERTIES(Supernovae-static PROPERTIES COMPILE_FLAGS "-DQT_STATICPLUGIN")
