update stellarium icon

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -10,6 +10,13 @@ ENDIF()
 IF(UNIX AND NOT APPLE)
   INSTALL(FILES stellarium.desktop DESTINATION share/applications)
   INSTALL(FILES stellarium.xpm DESTINATION share/pixmaps)
+  INSTALL(FILES icons/16x16/stellarium.png DESTINATION share/icons/hicolor/16x16/apps)
+  INSTALL(FILES icons/32x32/stellarium.png DESTINATION share/icons/hicolor/32x32/apps)
+  INSTALL(FILES icons/48x48/stellarium.png DESTINATION share/icons/hicolor/48x48/apps)
+  INSTALL(FILES icons/64x64/stellarium.png DESTINATION share/icons/hicolor/64x64/apps)
+  INSTALL(FILES icons/128x128/stellarium.png DESTINATION share/icons/hicolor/128x128/apps)
+  INSTALL(FILES icons/256x256/stellarium.png DESTINATION share/icons/hicolor/256x256/apps)
+  INSTALL(FILES icons/512x512/stellarium.png DESTINATION share/icons/hicolor/512x512/apps)
 ENDIF()
 
 IF(MACOSX)
