moved files from .stellarium to .config/stellarium

--- a/plugins/Quasars/CMakeLists.txt
+++ b/plugins/Quasars/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(QUASARS_VERSION "${QUASARS_PLUGIN_MAJOR}.${QUASARS_PLUGIN_MINOR}.${QUASARS_P
 IF(APPLE)
   SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ELSE(APPLE)
-  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DQUASARS_PLUGIN_VERSION="${QUASARS_VERSION}")
