--- a/plugins/Satellites/CMakeLists.txt
+++ b/plugins/Satellites/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Stellarium starts. (Less of a problem if it manages to get one update.)
 SET(SATELLITES_VERSION "0.7.3")
 
-SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 
 ADD_DEFINITIONS(-DSATELLITES_PLUGIN_VERSION="${SATELLITES_VERSION}")
 
