--- a/plugins/SolarSystemEditor/CMakeLists.txt
+++ b/plugins/SolarSystemEditor/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(SOLARSYSTEMEDITOR_VERSION "${SOLARSYSTEMEDITOR_MAJOR}.${SOLARSYSTEMEDITOR_MI
 IF(APPLE)
 	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DSOLARSYSTEMEDITOR_VERSION="${SOLARSYSTEMEDITOR_VERSION}")
