--- a/plugins/TelescopeControl/CMakeLists.txt
+++ b/plugins/TelescopeControl/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(TELESCOPE_CONTROL_VERSION "${TELESCOPE_CONTROL_MAJOR}.${TELESCOPE_CONTROL_MI
 IF(APPLE)
 	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 
 #SET(TELESCOPE_SERVERS_SOURCE_DIR "$ENV{STELROOT}/../telescope_server/src"
