--- a/plugins/TextUserInterface/CMakeLists.txt
+++ b/plugins/TextUserInterface/CMakeLists.txt
@@ -3,7 +3,7 @@ SET(TEXT_USER_INTERFACE_MINOR "2")
 SET(TEXT_USER_INTERFACE_PATCH "4")
 SET(TEXT_USER_INTERFACE_VERSION "${TEXT_USER_INTERFACE_MAJOR}.${TEXT_USER_INTERFACE_MINOR}.${TEXT_USER_INTERFACE_PATCH}")
 
-SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 
 ADD_SUBDIRECTORY( src )
 
