--- a/plugins/TimeZoneConfiguration/CMakeLists.txt
+++ b/plugins/TimeZoneConfiguration/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(TIME_ZONE_CONFIGURATION_VERSION "${TIME_ZONE_CONFIGURATION_MAJOR}.${TIME_ZON
 IF(APPLE)
 	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+	SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DTIME_ZONE_CONFIGURATION_VERSION="${TIME_ZONE_CONFIGURATION_VERSION}")
