--- a/plugins/HelloStelModule/CMakeLists.txt
+++ b/plugins/HelloStelModule/CMakeLists.txt
@@ -6,6 +6,6 @@ ADD_SUBDIRECTORY( src )
 IF(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 INSTALL(FILES DESTINATION "modules/HelloStelModule")
