--- a/plugins/Observability/CMakeLists.txt
+++ b/plugins/Observability/CMakeLists.txt
@@ -3,7 +3,7 @@ SET(OBSERVABILITY_VERSION "1.0.3")
 IF(APPLE)
    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ELSE(APPLE)
-   SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
+   SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DOBSERVABILITY_PLUGIN_VERSION="${OBSERVABILITY_VERSION}")
