--- a/plugins/Exoplanets/CMakeLists.txt
+++ b/plugins/Exoplanets/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(EXOPLANETS_VERSION "${EXOPLANETS_PLUGIN_MAJOR}.${EXOPLANETS_PLUGIN_MINOR}.${
 IF(APPLE)
   SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ELSE(APPLE)
-  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
+  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DEXOPLANETS_PLUGIN_VERSION="${EXOPLANETS_VERSION}")
