--- a/plugins/Oculars/CMakeLists.txt
+++ b/plugins/Oculars/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(OCULARS_VERSION "${OCULARS_STELMODULE_MAJOR}.${OCULARS_STELMODULE_MINOR}.${O
 IF(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
+    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DOCULARS_PLUGIN_VERSION="${OCULARS_VERSION}")
