--- a/plugins/RendererStatistics/CMakeLists.txt
+++ b/plugins/RendererStatistics/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(RENDERERSTATISTICS_VERSION "${RENDERERSTATISTICS_PLUGIN_MAJOR}.${RENDERERSTA
 IF(APPLE)
   SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ELSE(APPLE)
-  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
+  SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DRENDERERSTATISTICS_PLUGIN_VERSION="${RENDERERSTATISTICS_VERSION}")
