--- a/plugins/Supernovae/CMakeLists.txt
+++ b/plugins/Supernovae/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(SNE_VERSION "${SNE_MAJOR}.${SNE_MINOR}.${SNE_PATCH}")
 IF(APPLE)
     SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
 ElSE(APPLE)
-    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.config/stellarium)
+    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
 ENDIF(APPLE)
 
 ADD_DEFINITIONS(-DSUPERNOVAE_PLUGIN_VERSION="${SNE_VERSION}")
