added orbit_visualization_period for Moon

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -90,6 +90,7 @@ rot_rotation_offset = 38
 rot_obliquity = 23.45
 rot_equator_ascending_node = 0
 landscape = moon
+orbit_visualization_period = 27.321582
 
 [mars]
 name = Mars
