fixed orbit_visualization_period for Earth and Mars; extends getting info for core.getObserverLocationInfo() [scripting improvements]

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -73,7 +73,7 @@ rot_rotation_offset = 280.5
 rot_obliquity = -23.4392803055555555556
 rot_epoch = 2451545.0
 rot_precession_rate = 1.39639 #degrees/j.century (annual rate 50.27 arcseconds)
-orbit_visualization_period = 365.25
+orbit_visualization_period = 365.256363004
 atmosphere = 1
 landscape = guereins
 type = planet
@@ -115,7 +115,7 @@ rot_rotation_offset = 136.005
 #rot_equator_ascending_node = 82.91
 rot_pole_ra = 317.6725
 rot_pole_de = 52.88212
-orbit_visualization_period = 686.98
+orbit_visualization_period = 686.971
 atmosphere = 1
 landscape = mars
 type = planet
