Change default value for building mode (release); Apply workaround for solar system observer bug; Added comets C/2011 L4 (PANSTARRS) and C/2012 S1 (ISON) to ssystem.ini; Remove comet C/2006 P1 (McNaught) from ssystem.ini;

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1300,8 +1300,8 @@ lighting = false
 albedo = 0.
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
-orbit_Period = 5000000000000
-orbit_SemiMajorAxis = 50000000000
+orbit_Period = 700000000000
+orbit_SemiMajorAxis = 7000000000
 orbit_Eccentricity = 0
 orbit_Inclination = 90
 orbit_AscendingNode = 0
@@ -1309,27 +1309,6 @@ orbit_LongOfPericenter = 0
 orbit_MeanLongitude = 90
 rot_obliquity = 90
 hidden = true
-
-[mcnaught]
-name = C/2006 P1 (McNaught)
-parent = Sun
-radius = 1000
-oblateness = 0.0
-halo = true
-color = 1.0,1.0,1.0
-tex_halo = star16x16.png
-tex_map = nomap.png
-coord_func = comet_orbit
-orbit_TimeAtPericenter = 2454112.7968
-orbit_PericenterDistance = 0.170729
-orbit_Eccentricity = 1.000021
-orbit_ArgOfPericenter = 155.9756
-orbit_AscendingNode = 267.4148
-orbit_Inclination = 77.8348
-lighting = false
-albedo = 1
-orbit_visualization_period = 365.25
-type = comet
 
 [1ceres]
 name = Ceres
@@ -1600,3 +1579,41 @@ orbit_SemiMajorAxis = 66.95198
 albedo = 0.19
 radius = 1367
 type = plutoid
+
+[c2011l4(panstarrs)]
+parent = Sun
+orbit_Inclination = 84.2073
+coord_func = comet_orbit
+orbit_Eccentricity = 1.000032
+orbit_ArgOfPericenter = 333.6514
+absolute_magnitude = 5.5
+name = C/2011 L4 (PANSTARRS)
+slope_parameter = 4
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 65.6659
+albedo = 1
+radius = 5
+orbit_PericenterDistance = 0.301545
+type = comet
+orbit_TimeAtPericenter = 2456361.66969907
+
+[c2012s1(ison)]
+parent = Sun
+orbit_Inclination = 61.8916
+coord_func = comet_orbit
+orbit_Eccentricity = 1.000004
+orbit_ArgOfPericenter = 345.5129
+absolute_magnitude = 7
+name = C/2012 S1 (ISON)
+slope_parameter = 3.2
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 295.7319
+albedo = 1
+radius = 5
+orbit_PericenterDistance = 0.012499
+type = comet
+orbit_TimeAtPericenter = 2456625.29388889
