--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -105,7 +105,11 @@ flag_show_size                      = false
 flag_show_flip_buttons         = false
 flag_show_nebulae_background_button = false
 base_font_size                 = 13
-base_font_name                 = DejaVuSans.ttf
+#Name of custom font file for some languages, like Thai.
+#This file should be stored into data/ folder.
+#base_font_file                 = DejaVuSans.ttf
+#base_font_name                 = DejaVu Sans
+#safe_font_name                 = Verdana
 mouse_cursor_timeout           = 10
 flag_mouse_cursor_timeout      = false
 day_key_mode                   = calendar
