--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -236,6 +236,7 @@ flag_chart                     = false
 flag_night                     = false
 light_pollution_luminance      = 0.0
 use_luminance_adaptation       = true
+flag_render_solar_shadows      = true
 
 [astro]
 flag_stars                     = true
