update default settings

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -1617,3 +1617,24 @@ radius = 5
 orbit_PericenterDistance = 0.012499
 type = comet
 orbit_TimeAtPericenter = 2456625.29388889
+
+[2012da14]
+parent = Sun
+orbit_Inclination = 11.6062
+coord_func = comet_orbit
+orbit_Eccentricity = 0.089672
+orbit_ArgOfPericenter = 195.606
+absolute_magnitude = 24.4
+name = 2012 DA14
+orbit_Epoch = 2456400.5
+slope_parameter = 0.15
+lighting = false
+tex_map = nomap.png
+color = 1.0, 1.0, 1.0
+orbit_AscendingNode = 146.9959
+orbit_MeanMotion = 1.1351258
+orbit_MeanAnomaly = 231.0252
+orbit_SemiMajorAxis = 0.910137
+albedo = 0.15
+radius = 1
+type = asteroid
