--- a/po/stellarium/POTFILES.in
+++ b/po/stellarium/POTFILES.in
@@ -27,6 +27,7 @@ src/gui/AddRemoveLandscapesDialog.cpp
 src/gui/ScriptConsole.cpp
 src/gui/SearchDialog.cpp
 src/gui/ShortcutsDialog.cpp
+src/gui/CustomDeltaTEquationDialog.cpp
 src/main.cpp
 
 # Translations of strings not contained in the source code
