--- a/plugins/Oculars/resources/default_ocular.ini
+++ b/plugins/Oculars/resources/default_ocular.ini
@@ -4,6 +4,9 @@ use_max_exit_circle=true
 ocular_count=5
 ccd_count=1
 telescope_count=2
+enable_control_panel=true
+use_decimal_degrees=false
+lens_count=3
 
 [ocular]
 0\name=Ocular 0
@@ -51,4 +54,12 @@ telescope_count=2
 0\chip_width=22.2
 0\chip_height=14.8
 0\pixel_width=5.2
-0\pixel_heght=4.2
+0\pixel_height=5.2
+
+[lens]
+0\name=Barlow 2x
+0\multipler=2
+1\name=Barlow 3x
+1\multipler=3
+2\name=F/6.3 Reducer
+2\multipler=0.63
